Add move logic